# app-diktanalyse

./: .cloudignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  config.py  docker-compose.yml  parse_poems.py  pylock.toml  pyproject.toml  tasks.py  test_annotations.py
.github/workflows/: deploy-pages.yml
docs/: index.html
static/: poems.json
templates/: index.html
